@@ -1,6 +1,7 @@
 2.22.1
  - fix: prevent accidental polygon filter creation (#148)
  - fix: disable QuickView controls when there is no data to display
+ - fix: IndexError when trying to show a deleted slot in QuickView (#214)
 2.22.0
  - feat: export image data as video (#202)
  - fix: persist feature selection in QuickView when switching data slots (#206)
